# swizzleflow

./: .gitignore  Cargo.toml  Makefile  README.md  blis_env_vars.sh  build.rs  function_sets.md
algo_desc/: .gitignore  main.tex
analysis/: extraction.py  matmul_timing.py  matrices.py  parsing.py  plots.py  pruning_info.py  swizzle_inventor_benchmark_harness.sh  timing.py  utils.py
notebooks/: 2020-01-08-pruning-stats-and-symmetry-break.ipynb  2020-04-28-multiply-timings.ipynb  2020-05-04-more-detailed-plots.ipynb  2020-05-13-parallelism-experiment.ipynb  2020-05-20-spreadsheets-for-new-algorithm.ipynb  2020-06-10-pruning-fuel-experiments.ipynb  2020-06-30-cache-speedups-spreadsheet.ipynb  2020-10-08-multiplication-timings-changes.ipynb  2020-10-29-pruning-goodness.ipynb  2020-11-05-plot-experiments.ipynb  analysis-for-quals-paper.ipynb
result_processing/: pruning_numbers.pl  pruning_percentages.pl  timing.pl
results/: 2019-05-22-conv-dont-cheat-all  2019-05-22-larger-1d-conv-synthesis-all  2019-05-22-more-trove-results  2019-05-22-more-trove-results-all  2019-05-22-small-1d-conv-synthesis-all  2019-05-22-trove-3x8-initial-all  2019-05-22-trove-with-initial-stats  2019-05-24-mkl-results  2019-05-30-refactored-operators-including-matrix-regen  2019-06-03-add-caching-and-caching-stats  2019-06-04-filter-out-reads-to-garbage-from-matrices  2019-06-04-general-domain-framework  2019-09-14-add-levels-support  2019-09-15-algebraic-convolution  2019-09-15-algebraic-convolution-all  2019-09-15-performance-improvements  2019-09-16-add-short-circuting-folds  (+234 more)
src/: lexer.rs  (+17 more)
(+283 files in other folders)
