[package]
name = "swizzleflow"
version = "0.2.0"
authors = ["Krzysztof Drewniak <krzysdrewniak@gmail.com>"]
edition = "2018"

[dependencies]
intel-mkl-src = { version = "0.4.0" }
ndarray = { version = "0.12", features = ["blas"] }

smallvec = "0.6.9"
bit-vec = "0.5.1"

num-integer = "0.1.39"
itertools = "0.8.0"
byteorder = "1.3.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

error-chain = "0.12.1"

clap = "2"

[dev-dependencies]
tempfile = "3"
