[package]
name = "swizzleflow"
version = "0.5.0"
authors = ["Krzysztof Drewniak <krzysdrewniak@gmail.com>"]
edition = "2018"

[dependencies]
# intel-mkl-src = { version = "0.4.0" }
ndarray = { version = "0.13" }

smallvec = "1.4.0"
bit-vec = "0.6.2"

rustc-hash = "1.1.0"

num-integer = "0.1.39"
itertools = "0.9.0"
byteorder = "1.3.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

error-chain = "0.12.2"

clap = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = []
stats = []
